--- a/sass/theme/_header.scss
+++ b/sass/theme/_header.scss
@@ -20,9 +20,11 @@
     display: inline-block;
     font-size: 3rem;
     margin: 1rem 0 0 0;
+    color: $primary-color;
 
     a {
       text-decoration: none;
+      color: inherit;
     }
   }
 
